Fix styling alignment issues with the buttons.

--- a/plone/app/registry/browser/resources/style.css
+++ b/plone/app/registry/browser/resources/style.css
@@ -21,7 +21,7 @@
 }
 
 #searchrow button{
-    margin: 4px;
+    margin: 1px;
     cursor: pointer;
     padding: 4px;
 }
